--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
 
   app:
     build: .
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
+    command: uvicorn app.infrastructure.api.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
       - ./app:/app/app
     ports:
